# JusticePDF

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.ps1  install2.ps1  magical-forging-sprout.md  pyproject.toml  pytest.ini  run_justicepdf.ps1
.serena/: project.yml
dev/: build_manual_docx.py  build_manual_screenshots.py  calibrate_freetext_acrobat.py
docs/: ADDING_REQUIREMENTS.md  feature-updates.md  glowing-forging-steele.md  requirement_202602011934.md  requirements.md  requirements_202602012029.md  requirements_20260202_1110.md  requirements_20260202_1144.md  requirements_20260202_1207.md
src/: __init__.py  app.rs  folder_watcher.rs  main.py  main.rs  main_window.rs  page_edit_window.rs  path_utils.rs  pdf_card.rs  pdf_utils.rs  undo_manager.rs  zoom_view.rs
tests/: conftest.py  helpers.py  test_app_settings.py  test_bookmarks_notes.py  test_bookmarks_panel.py  test_card_merge.py  test_external_drop.py  test_folder_open.py  test_folder_watcher.py  test_main_window_context_menu.py  test_main_window_dnd.py  test_main_window_export_folders.py  test_main_window_file_events.py  test_main_window_merge.py  test_main_window_reconcile_recovery.py  test_memo7_pytestqt.py  test_merge_bookmarks.py  test_page_edit_window_bookmarks.py  test_page_edit_window_callout.py  test_page_edit_window_freetext.py  test_page_edit_window_markup.py  test_page_edit_window_note.py  test_page_edit_window_shape_defaults.py  test_page_edit_window_spread.py  test_page_edit_window_zoom_nav.py  test_page_extraction.py  test_page_thumbnail_dnd.py  test_pdf_card.py  test_pdf_card_dnd.py  test_pdf_utils.py  test_pdf_utils_cache.py  test_pdf_utils_callout.py  test_pdf_utils_freetext.py  test_pdf_utils_markup.py  test_pdf_utils_note.py  test_pdf_utils_shape_transparent_border.py  test_pdf_utils_toc.py  test_undo_manager.py  test_zip_import.py
tools/: build_launcher_exe.ps1  build_manual_docx.py  build_manual_screenshots.py  (+8 more)
(+47 files in other folders)
