[package]
name = "justicepdf"
version = "0.1.0"
edition = "2021"
description = "JusticePDF - Visual PDF merge/split application"
authors = ["JusticePDF Team"]
license = "MIT"

[dependencies]
# GUI Framework
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }

# PDF Processing
lopdf = "0.34"
image = { version = "0.25", features = ["png", "jpeg"] }

# File System
notify = "7"
dirs = "5"
trash = "5"

# Utilities
log = "0.4"
env_logger = "0.11"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"

# Async/Threading
crossbeam-channel = "0.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellapi", "winuser"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
