[project]
name = "justicepdf"
version = "0.1.0"
description = "JustinPDF - Visual PDF merge/split application."
requires-python = ">=3.11"
dependencies = [
    "PyQt6==6.10.2",
    "PyMuPDF==1.26.7",
    "watchdog==6.0.0",
    "Send2Trash==2.1.0",
    "pytest==9.0.2",
    "pytest-qt==4.5.0",
    "pywin32==311; platform_system == 'Windows'",
]

[build-system]
requires = ["setuptools==80.10.2", "wheel==0.46.3"]
build-backend = "setuptools.build_meta"
